--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -11,7 +11,7 @@
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <ion-item lines="full" color="dark" style="padding-left: 0px;" class="mt-3">
                 <ion-label position="floating">User name</ion-label>
-                <ion-input type="text" formControlName="user_name" required></ion-input>
+                <ion-input [(ngModel)]="user_name" type="text" formControlName="user_name" required></ion-input>
                 <div *ngIf="user_name.invalid && user_name.touched">
                     User Name is Required
                 </div>
@@ -19,7 +19,7 @@
         
             <ion-item lines="full" color="dark" class="mt-3">
                 <ion-label position="floating">Email</ion-label>
-                <ion-input type="text" formControlName="email" required></ion-input>
+                <ion-input [(ngModel)]="email" type="text" formControlName="email" required></ion-input>
                 <div *ngIf="email.invalid && email.touched">
                     Email is Required
                 </div>
@@ -27,7 +27,7 @@
         
             <ion-item lines="full" color="dark" class="mt-3">
                 <ion-label position="floating">Password</ion-label>
-                <ion-input type="password" formControlName="password" required></ion-input>
+                <ion-input [(ngModel)]="password" type="password" formControlName="password" required></ion-input>
                 <div *ngIf="password.invalid && password.touched">
                     Password is Required
                 </div>
