--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -8,7 +8,7 @@
         </ion-toolbar>
     </ion-header>
     <ion-content>
-        <form>
+        <form [formGroup]="loginForm">
             <ion-item lines="full" color="dark" class="mt-3">
                 <ion-label position="floating">Email</ion-label>
                 <ion-input type="text" required></ion-input>
@@ -21,7 +21,7 @@
         
             <ion-row class="mt-3">
                 <ion-col class="pl-0">
-                    <ion-button type="submit" color="success" class="text-white" expand="block">Sign In</ion-button>
+                    <ion-button type="submit" color="success" class="text-white" expand="block" (click)="onSubmit()">Sign In</ion-button>
                 </ion-col>
             </ion-row>
             <div class="text-black mt-1 fs-16 text-center">
