--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -8,25 +8,23 @@
         </ion-toolbar>
     </ion-header>
     <ion-content>
-        <form [formGroup]="loginForm">
-            <ion-item lines="full" color="dark" class="mt-3">
-                <ion-label position="floating">Email</ion-label>
-                <ion-input type="text" required></ion-input>
-            </ion-item>
-        
-            <ion-item lines="full" color="dark" class="mt-3">
-                <ion-label position="floating">Password</ion-label>
-                <ion-input type="password" required></ion-input>
-            </ion-item>
-        
-            <ion-row class="mt-3">
-                <ion-col class="pl-0">
-                    <ion-button type="submit" color="success" class="text-white" expand="block" (click)="onSubmit()">Sign In</ion-button>
-                </ion-col>
-            </ion-row>
-            <div class="text-black mt-1 fs-16 text-center">
-                Not a Member? Please<span class="text-blue pointer ml-1" routerLink="register">Click here</span> to Sign Up
-            </div>
-        </form>
+        <ion-item lines="full" color="dark" class="mt-3">
+            <ion-label position="floating">Email</ion-label>
+            <ion-input [(ngModel)]="email" type="text" required></ion-input>
+        </ion-item>
+    
+        <ion-item lines="full" color="dark" class="mt-3">
+            <ion-label position="floating">Password</ion-label>
+            <ion-input [(ngModel)]="password" type="password" required></ion-input>
+        </ion-item>
+    
+        <ion-row class="mt-3">
+            <ion-col class="pl-0">
+                <ion-button type="submit" color="success" class="text-white" expand="block" (click)="onSubmit()" [disabled]="!email && !password">Sign In</ion-button>
+            </ion-col>
+        </ion-row>
+        <div class="text-black mt-1 fs-16 text-center">
+            Not a Member? Please<span class="text-blue pointer ml-1" routerLink="register">Click here</span> to Sign Up
+        </div>
     </ion-content>
 </div>
