--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -8,39 +8,37 @@
         </ion-toolbar>
     </ion-header>
     <ion-content>
-        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-            <ion-item lines="full" color="dark" style="padding-left: 0px;" class="mt-3">
-                <ion-label position="floating">User name</ion-label>
-                <ion-input type="text" [(ngModel)]="registerForm.user_name" required></ion-input>
-                <div *ngIf="user_name.invalid && user_name.touched">
-                    User Name is Required
-                </div>
-            </ion-item>
-        
-            <ion-item lines="full" color="dark" class="mt-3">
-                <ion-label position="floating">Email</ion-label>
-                <ion-input type="text" [(ngModel)]="registerForm.email"  required></ion-input>
-                <div *ngIf="email.invalid && email.touched">
-                    Email is Required
-                </div>
-            </ion-item>
-        
-            <ion-item lines="full" color="dark" class="mt-3">
-                <ion-label position="floating">Password</ion-label>
-                <ion-input type="password" [(ngModel)]="registerForm.password"  required></ion-input>
-                <div *ngIf="password.invalid && password.touched">
-                    Password is Required
-                </div>
-            </ion-item>
-        
-            <ion-row class="mt-3">
-                <ion-col class="pl-0">
-                    <ion-button type="submit" color="success" class="text-white" expand="block">Sign Up</ion-button>
-                </ion-col>
-            </ion-row>
-            <div class="text-black mt-1 fs-16 text-center">
-                Already a Member? Please<span class="text-blue pointer ml-1" routerLink="">Click here</span> to Sign In
+        <ion-item lines="full" color="dark" style="padding-left: 0px;" class="mt-3">
+            <ion-label position="floating">User name</ion-label>
+            <ion-input type="text" [(ngModel)]="user_name" required></ion-input>
+            <div *ngIf="user_name.invalid && user_name.touched">
+                User Name is Required
             </div>
-        </form>
+        </ion-item>
+    
+        <ion-item lines="full" color="dark" class="mt-3">
+            <ion-label position="floating">Email</ion-label>
+            <ion-input type="text" [(ngModel)]="email"  required></ion-input>
+            <div *ngIf="email.invalid && email.touched">
+                Email is Required
+            </div>
+        </ion-item>
+    
+        <ion-item lines="full" color="dark" class="mt-3">
+            <ion-label position="floating">Password</ion-label>
+            <ion-input type="password" [(ngModel)]="password"  required></ion-input>
+            <div *ngIf="password.invalid && password.touched">
+                Password is Required
+            </div>
+        </ion-item>
+    
+        <ion-row class="mt-3">
+            <ion-col class="pl-0">
+                <ion-button type="submit" color="success" class="text-white" (click)="onSubmit()" [disabled]="!email && !password && !user_name" expand="block">Sign Up</ion-button>
+            </ion-col>
+        </ion-row>
+        <div class="text-black mt-1 fs-16 text-center">
+            Already a Member? Please<span class="text-blue pointer ml-1" routerLink="">Click here</span> to Sign In
+        </div>
     </ion-content>
 </div>
