--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,10 +33,10 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size-md=4 offset-md=2>
+      <ion-col size-md=4 offset-md=2 (click)="redirectList()">
         <ion-card color="medium">
           <ion-card-header>
-            <ion-card-title text-center position=floating >Happy </ion-card-title>
+            <ion-card-title text-center position=floating class="pointer">Happy </ion-card-title>
           </ion-card-header>
           <ion-card-content>
 
