--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,103 +14,103 @@
   
     <ion-title>BOOKS THIS WEEK</ion-title>
   </ion-toolbar>
-  <ion-content [fullscreen]="true">
-    <ion-card color=medium >
-      <ion-card-content class="ion-align-items-center" style="padding-left: 20px;" class="mt-3">
-        <ion-grid>
-  <ion-row class="header ion-align-items-center">
-        <img src="assets\ChildrenOfRevolution.jpg" alt="" style="padding-left: 20px;" width="170" height="200">
-        <!-- <ion-title>ChildrenOfRevolution</ion-title> -->
-        <img src="assets\SAS-SecretWar.jpg" alt="" style="padding-left: 30px;" width="170" height="200">
-        <!-- <ion-label>SAS Secret War</ion-label> -->
-        <img src="assets\ForgiveForGood.jpg" alt="" style="padding-left: 30px;" width="170" height="200">
-        <img src="assets\The Rosedale Diet.jpeg" alt="" style="padding-left: 30px;" width="170" height="200">
-      </ion-row>
-        <!-- <ion-label>Forgive for good</ion-label> -->
-        <ion-button fill="block" color=primary text-center>Click for more</ion-button>
-  
-      </ion-grid>
-      </ion-card-content>
-  
-     </ion-card>
-    </ion-content>
-  <ion-content>
-    <ion-grid>
-      <ion-row  class="header ion-align-items-center">
-        <ion-col class="ion-align-items-center" size-md=2 offset-md=1 >
-          <ion-card color="dark" (click)="redirectList()">
-            <ion-card-header>
-              <ion-card-title text-center >Happy </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
+  <div class="h-100" style="overflow: auto;">
+    <ion-content [fullscreen]="false">
+        <ion-card color=medium >
+        <ion-card-content class="ion-align-items-center" style="padding-left: 20px;" class="mt-3">
+            <ion-grid>
+                <ion-row class="header ion-align-items-center">
+                    <img src="assets\ChildrenOfRevolution.jpg" alt="" style="padding-left: 20px;" width="170" height="200">
+                    <!-- <ion-title>ChildrenOfRevolution</ion-title> -->
+                    <img src="assets\SAS-SecretWar.jpg" alt="" style="padding-left: 30px;" width="170" height="200">
+                    <!-- <ion-label>SAS Secret War</ion-label> -->
+                    <img src="assets\ForgiveForGood.jpg" alt="" style="padding-left: 30px;" width="170" height="200">
+                    <img src="assets\The Rosedale Diet.jpeg" alt="" style="padding-left: 30px;" width="170" height="200">
+                </ion-row>
+                <!-- <ion-label>Forgive for good</ion-label> -->
+                <ion-button fill="block" color=primary text-center>Click for more</ion-button>
+            </ion-grid>
         </ion-card-content>
-          </ion-card>
-          <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
-        </ion-col>
-        <ion-col class= "ion-align-items-center" size-md=2 offset-md=1>
-          <ion-card color="dark" (click)="redirectList()">
-            <ion-card-header>
-              <ion-card-title text-center >Sad </ion-card-title>
-            </ion-card-header>
-          </ion-card>
-          <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
-        </ion-col>
-        <ion-col class="ion-align-items-center" size-md=2 offset-md=1>
-          <ion-card color="dark" (click)="redirectList()">
-            <ion-card-header>
-              <ion-card-title text-center> Angry </ion-card-title>
-            </ion-card-header>
-          </ion-card>
-          <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
-        </ion-col>
-        <!-- <ion-col size=4>
-              <ion-button (click)="onChangeText()" fill ="solid" size=large color="danger">Angry</ion-button>
+        </ion-card>
+    </ion-content>
+    <ion-content>
+        <ion-grid>
+        <ion-row  class="header ion-align-items-center">
+            <ion-col class="ion-align-items-center" size-md=2 offset-md=1 >
+            <ion-card color="dark" (click)="redirectList()">
+                <ion-card-header>
+                <ion-card-title text-center >Happy </ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+            </ion-card-content>
+            </ion-card>
+            <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
             </ion-col>
-        <ion-col size=4>
-           <ion-button (click)="onChangeText()" fill="solid" size=large color="tertiary">Calm</ion-button>
-          </ion-col> -->
-      </ion-row>
-      <ion-row class="ion-align-items-center">
-        <ion-col class="ion-align-items-center" size-md=2 offset-md=1>
-          <ion-card color="dark" class="pointer"  (click)="redirectList()">
-            <ion-card-header>
-              <ion-card-title text-center position=floating >Calm </ion-card-title>
-            </ion-card-header>
-          </ion-card>
-          <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
-        </ion-col>
-        <ion-col class="ion-align-items-center" size-md=2 offset-md=1>
-          <ion-card color="dark" class="pointer" (click)="redirectList()">
-            <ion-card-header>
-              <ion-card-title text-center position=floating >Joy </ion-card-title>
-            </ion-card-header>
-          </ion-card>
-          <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
-        </ion-col>
-        <ion-col class="ion-align-items-center" size-md=2 offset-md=1>
-          <ion-card color="dark" class="pointer" (click)="redirectList()">
-            <ion-card-header>
-              <ion-card-title text-center position=floating >Fear </ion-card-title>
-            </ion-card-header>
-          </ion-card>
-          <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  
-     <!-- <ion-button (click)="onChangeText()" fill="solid" size=large color="medium"  style="padding-left: 0px;" >Happy</ion-button>
-  
-     <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button>
-     <ion-button (click)="onChangeText()" fill ="solid" size=large color="danger" >Angry</ion-button>
-     <ion-button (click)="onChangeText()" fill="solid" size=large color="success"  >Calm</ion-button>
-     <ion-button (click)="onChangeText()" fill ="solid" size=large color="tertiary" >Joy</ion-button>
-     <ion-button (click)="onChangeText()" fill ="solid" size=large color="light" >Fear</ion-button> -->
-  
-  
-    <!-- <div id="container">
-      <strong></strong>
-      <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-    </div> -->
-  </ion-content>
+            <ion-col class= "ion-align-items-center" size-md=2 offset-md=1>
+            <ion-card color="dark" (click)="redirectList()">
+                <ion-card-header>
+                <ion-card-title text-center >Sad </ion-card-title>
+                </ion-card-header>
+            </ion-card>
+            <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
+            </ion-col>
+            <ion-col class="ion-align-items-center" size-md=2 offset-md=1>
+            <ion-card color="dark" (click)="redirectList()">
+                <ion-card-header>
+                <ion-card-title text-center> Angry </ion-card-title>
+                </ion-card-header>
+            </ion-card>
+            <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
+            </ion-col>
+            <!-- <ion-col size=4>
+                <ion-button (click)="onChangeText()" fill ="solid" size=large color="danger">Angry</ion-button>
+                </ion-col>
+            <ion-col size=4>
+            <ion-button (click)="onChangeText()" fill="solid" size=large color="tertiary">Calm</ion-button>
+            </ion-col> -->
+        </ion-row>
+        <ion-row class="ion-align-items-center">
+            <ion-col class="ion-align-items-center" size-md=2 offset-md=1>
+            <ion-card color="dark" class="pointer"  (click)="redirectList()">
+                <ion-card-header>
+                <ion-card-title text-center position=floating >Calm </ion-card-title>
+                </ion-card-header>
+            </ion-card>
+            <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
+            </ion-col>
+            <ion-col class="ion-align-items-center" size-md=2 offset-md=1>
+            <ion-card color="dark" class="pointer" (click)="redirectList()">
+                <ion-card-header>
+                <ion-card-title text-center position=floating >Joy </ion-card-title>
+                </ion-card-header>
+            </ion-card>
+            <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
+            </ion-col>
+            <ion-col class="ion-align-items-center" size-md=2 offset-md=1>
+            <ion-card color="dark" class="pointer" (click)="redirectList()">
+                <ion-card-header>
+                <ion-card-title text-center position=floating >Fear </ion-card-title>
+                </ion-card-header>
+            </ion-card>
+            <!-- <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button> -->
+            </ion-col>
+        </ion-row>
+        </ion-grid>
+    
+        <!-- <ion-button (click)="onChangeText()" fill="solid" size=large color="medium"  style="padding-left: 0px;" >Happy</ion-button>
+    
+        <ion-button (click)="onChangeText()" fill ="solid" size=large color="warning" >Sad</ion-button>
+        <ion-button (click)="onChangeText()" fill ="solid" size=large color="danger" >Angry</ion-button>
+        <ion-button (click)="onChangeText()" fill="solid" size=large color="success"  >Calm</ion-button>
+        <ion-button (click)="onChangeText()" fill ="solid" size=large color="tertiary" >Joy</ion-button>
+        <ion-button (click)="onChangeText()" fill ="solid" size=large color="light" >Fear</ion-button> -->
+    
+    
+        <!-- <div id="container">
+        <strong></strong>
+        <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+        </div> -->
+    </ion-content>
+</div>
   
   
