--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -1,83 +1,82 @@
-<div class="h-100">
-    <ion-view view-title="Library">
-        <ion-header class="bar bar-header bar-dark">
-            <h1 class="title">bar-dark</h1>
-        </ion-header>
-        <ion-content style="
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            /* background-size: cover; */" class="padding">
+
+
+    <ion-header class="bar bar-header bar-dark">
+        <h1 class="title">List</h1>
+    </ion-header>
+    <ion-content style="
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        /* background-size: cover; */" class="padding">
 
 
 
-            <ion-card>
+        <ion-card>
 
-            <ion-item>
-                <ion-avatar item-start>
-                <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
-                    src="./../../assets/2states.jpg">
-                </ion-avatar>
-                <h2>2 States</h2>
-                <p>Author : Chetan Bhagat</p>
-                <p>Language : English</p>
-                <p>Pages :209</p>
-            </ion-item>
+        <ion-item>
+            <ion-avatar item-start>
+            <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
+                src="./../../assets/2states.jpg">
+            </ion-avatar>
+            <h2>2 States</h2>
+            <p>Author : Chetan Bhagat</p>
+            <p>Language : English</p>
+            <p>Pages :209</p>
+        </ion-item>
 
-            <ion-item>
-                <ion-avatar item-start>
-                <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
-                    src="./../../assets/things.jpg">
-                </ion-avatar>
-                <h2>Things Fall Apart</h2>
-                <p>Author: Chinua Achebe</p>
-                <p>Language : English</p>
-                <p>Pages :341</p>
-            </ion-item>
+        <ion-item>
+            <ion-avatar item-start>
+            <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
+                src="./../../assets/things.jpg">
+            </ion-avatar>
+            <h2>Things Fall Apart</h2>
+            <p>Author: Chinua Achebe</p>
+            <p>Language : English</p>
+            <p>Pages :341</p>
+        </ion-item>
 
-            <ion-item>
-                <ion-avatar item-start>
-                <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
-                    src="./../../assets/price.jpg">
-                </ion-avatar>
-                <h2>Pride and Prejudice</h2>
-                <p>Jane Austen</p>
-                <p>Language : English</p>
-                <p>Pages :190</p>
-            </ion-item>
+        <ion-item>
+            <ion-avatar item-start>
+            <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
+                src="./../../assets/price.jpg">
+            </ion-avatar>
+            <h2>Pride and Prejudice</h2>
+            <p>Jane Austen</p>
+            <p>Language : English</p>
+            <p>Pages :190</p>
+        </ion-item>
 
-            <ion-item>
-                <ion-avatar item-start>
-                <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
-                    src="./../../assets/ficciones.jpg">
-                </ion-avatar>
-                <h2>Ficciones</h2>
-                <p>Author: Jorge Luis Borges</p>
-                <p>Language : English</p>
-                <p>Pages :150</p>
-            </ion-item>
+        <ion-item>
+            <ion-avatar item-start>
+            <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
+                src="./../../assets/ficciones.jpg">
+            </ion-avatar>
+            <h2>Ficciones</h2>
+            <p>Author: Jorge Luis Borges</p>
+            <p>Language : English</p>
+            <p>Pages :150</p>
+        </ion-item>
 
-            <ion-item>
-                <ion-avatar item-start>
-                <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
-                    src="./../../assets/stranger.jpg">
-                </ion-avatar>
-                <h2>The Stranger</h2>
-                <p>Author: Albert Camus</p>
-                <p>Language : French</p>
-                <p>Pages :450</p>
-            </ion-item>
-
-
-
-            </ion-card>
+        <ion-item>
+            <ion-avatar item-start>
+            <img style="float:left!important;margin-right:16px!important;width:60px;height: 90px;"
+                src="./../../assets/stranger.jpg">
+            </ion-avatar>
+            <h2>The Stranger</h2>
+            <p>Author: Albert Camus</p>
+            <p>Language : French</p>
+            <p>Pages :450</p>
+        </ion-item>
 
 
 
+        </ion-card>
 
-        </ion-content>
-    </ion-view>
-</div>
+
+
+
+    </ion-content>
+
